--- a/energy-audit/src/components/Header/Header.scss
+++ b/energy-audit/src/components/Header/Header.scss
@@ -18,9 +18,15 @@
     text-decoration: none;
     font-weight: bold;
     border-radius: 8px;
-    border: none;
+    border: 1px solid #0094ff; 
     transition: all 0.2s ease;
     text-align: center;
+      &:hover {
+      background-color: #ffffff;  
+      border-color: #0094ff;  
+      border: 1px solid #0094ff;   
+      color: #0094ff;     
+    }
   }
 
   nav {
@@ -34,7 +40,7 @@
     flex: 1;  
     width: 100px;
     padding: 8px 20px;
-    background-color: #2d73a7;
+    
     color: #ffffff;
     text-decoration: none;
     font-weight: bold;
