--- a/energy-audit/src/styles/page.scss
+++ b/energy-audit/src/styles/page.scss
@@ -4,3 +4,29 @@
   text-align: center;
   color: #333;
 }
+  .Report{
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+    justify-content: flex-end;
+  }
+
+  .btn-report {
+    width: 155px;
+    padding: 11px 20px;
+    background-color: #0094ff;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 8px;
+    border: 1px solid #0094ff;    
+    transition: all 0.2s ease;
+    text-align: center;
+
+      &:hover {
+      background-color: #ffffff;  
+      border-color: #0094ff;  
+      border: 1px solid #0094ff;   
+      color: #0094ff;     
+    }
+  }
