--- a/energy-audit/src/components/ReportsTable/ReportsTable.scss
+++ b/energy-audit/src/components/ReportsTable/ReportsTable.scss
@@ -6,7 +6,7 @@
 .table-header {
   display: grid;
   grid-template-columns: 1fr 200px;
-  background: #2d73a7;
+  background: #177fb0;
   color: #fff;
   padding: 10px;
   font-weight: bold;
