--- a/energy-audit/src/components/Modal/Modal.scss
+++ b/energy-audit/src/components/Modal/Modal.scss
@@ -2,6 +2,7 @@
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,13 +10,23 @@
 }
 
 .modal {
-  background: white;
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: none;
+  font-weight: 600;
+  border: 1px solid rgba(0, 182, 159, 0.4);
+  background: rgba(0, 0, 0, 0.603);
+  backdrop-filter: blur(10px);
   width: 400px;
   border-radius: 10px;
   padding: 20px;
   animation: fadeIn 0.2s ease;
 }
-
+.modal-User-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    
+  }
 .modal__header {
   display: flex;
   justify-content: space-between;
@@ -25,6 +36,7 @@
 
 .modal__close {
   background: none;
+  color: #ffffff;
   border: none;
   font-size: 20px;
   cursor: pointer;
@@ -36,18 +48,37 @@
   gap: 10px;
 
   input {
-    padding: 10px;
+    display: flex;
+    flex: 1;
+    min-width: 110px;
+    padding: 14px 16px;
+    color: rgba(255, 255, 255, 0.9);
+    text-decoration: none;
+    font-weight: 600;
     border-radius: 6px;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 182, 159, 0.4);
+    background: rgba(255, 255, 255, 0.075);
+    transition: all 0.2s ease
   }
 
   button {
-    padding: 10px;
-    background: #0094ff;
-    color: white;
-    border: none;
+    padding: 14px 16px;
+    min-width: 140px;
+    background: rgba(0, 182, 159, 0.15);
+    color: #ffffff;
+    font-weight: 600;
     border-radius: 6px;
+    border: 1px solid rgba(0, 182, 159, 0.4);
     cursor: pointer;
+    transition: all 0.2s ease;
+    backdrop-filter: blur(6px);
+
+    &:hover {
+      background: rgba(0, 182, 159, 0.35);
+      border-color: #00b69f;
+      color: #ffffff;
+      transform: translateY(-1px);
+    }
   }
 }
 
@@ -56,8 +87,37 @@
     opacity: 0;
     transform: scale(0.95);
   }
+
   to {
     opacity: 1;
     transform: scale(1);
+  }
+}
+
+/* 🍔 Навигация внутри бургер-меню */
+.burger-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 10px;
+
+  .btn-link {
+    display: flex;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 14px 16px;
+    font-size: 16px;
+    border-radius:6px;
+
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(0, 182, 159, 0.35);
+
+    justify-content: center;
+
+    &:hover {
+      background: rgba(0, 182, 159, 0.25);
+      border-color: #00b69f;
+    }
+
   }
 }
