--- a/energy-audit/src/styles/page.scss
+++ b/energy-audit/src/styles/page.scss
@@ -68,3 +68,13 @@ p {
     margin-bottom: 0;
   }
 }
+.fade-up {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.6s ease-out;
+}
+
+.fade-up.show {
+  opacity: 1;
+  transform: translateY(0);
+}
