--- a/energy-audit/src/styles/page.scss
+++ b/energy-audit/src/styles/page.scss
@@ -155,3 +155,13 @@ p {
   }
 }
 
+@media (max-width: 650px) {
+  .services {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-top: 30px;
+}
+}
+  
