--- a/energy-audit/src/components/Modal/Modal.scss
+++ b/energy-audit/src/components/Modal/Modal.scss
@@ -22,6 +22,9 @@
   padding: 20px;
   animation: fadeIn 0.2s ease;
 }
+.benka_logo_modal{
+  max-width: 130px;
+}
 .modal-User-buttons {
     display: flex;
     flex-direction: column;
