--- a/energy-audit/src/components/Slider/EquipmentSlider.scss
+++ b/energy-audit/src/components/Slider/EquipmentSlider.scss
@@ -1,4 +1,5 @@
 .swiper {
+  padding-top: 20px;
   padding-bottom: 40px;
 }
 
@@ -10,10 +11,38 @@
   border: 1px solid rgba(0, 182, 159, 0.35);
   border-radius: 22px;
   backdrop-filter: blur(10px);
-
   color: white;
   text-align: center;
+    transition: all 0.5s ease;
+    
+  &::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    border-radius: 24px;
+    padding: 2px;
+    background: linear-gradient(135deg, #00b69f, #00ffc3, #009688);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
 
+  &:hover {
+    transform: translateY(-5px) scale(1.01);
+    box-shadow: 0 5px 20px rgba(0, 182, 159, 0.25);
+
+    &::before {
+      opacity: 1;
+    }
+
+    img {
+      transform: scale(1.05) ;
+      transition: all 0.8s ease;
+    }
+  }
   h5 {
     font-size: 16px;
     height: 50px;
