--- a/energy-audit/src/components/Modal/Modal.scss
+++ b/energy-audit/src/components/Modal/Modal.scss
@@ -98,7 +98,7 @@
   }
 }
 
-/* 🍔 Навигация внутри бургер-меню */
+/* 🍔 Навигация внуНаши работы бургер-меню */
 .burger-nav {
   display: flex;
   flex-direction: column;
